<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/settings_bg"
            android:padding="15dp"
            android:layout_marginTop="@dimen/dp_5"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/save_namaz_time" />

            <TextView
                android:id="@+id/edit_textView_namaz_time_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:text="@string/icon_edit"
                />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/namaz_time_layout"
            android:visibility="gone"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_15"
                >

                <TextView
                    android:id="@+id/fajr_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fajr"

                    />

                <TextView
                    android:id="@+id/fajr_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:layout_marginLeft="@dimen/dp_15"
                    />

                <CheckBox
                    android:id="@+id/fajrEnable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable"
                    android:checked="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/fajrEdit"
                    android:text="@string/icon_edit"
                    android:layout_marginLeft="@dimen/dp_15"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_5"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zuhar"

                />

            <TextView
                android:id="@+id/zuhar_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:layout_marginLeft="@dimen/dp_15"
                />

            <CheckBox
                android:id="@+id/zuharEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable"
                android:checked="true"
                android:layout_marginLeft="@dimen/dp_15"
                />

            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/zuharEdit"
                android:text="@string/icon_edit"
                android:layout_marginLeft="@dimen/dp_15"
                />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_5"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asar"
                />

            <TextView
                android:id="@+id/asar_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:layout_marginLeft="@dimen/dp_15"
                />

            <CheckBox
                android:id="@+id/asarEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable"
                android:checked="true"
                android:layout_marginLeft="@dimen/dp_15"
                />

            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/asarEdit"
                android:text="@string/icon_edit"
                android:layout_marginLeft="@dimen/dp_15"
                />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_5"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maghrab"

                    />

                <TextView
                    android:id="@+id/maghrib_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:layout_marginLeft="@dimen/dp_15"
                    />

                <CheckBox
                    android:id="@+id/maghribEnable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable"
                    android:checked="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/maghribEdit"
                    android:text="@string/icon_edit"
                    android:layout_marginLeft="@dimen/dp_15"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_5"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isha"
                    />

                <TextView
                    android:id="@+id/isha_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:layout_marginLeft="@dimen/dp_15"
                    />

                <CheckBox
                    android:id="@+id/ishaEnable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable"
                    android:checked="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/ishaEdit"
                    android:text="@string/icon_edit"
                    android:layout_marginLeft="@dimen/dp_15"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_5"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jumah"
                    />

                <TextView
                    android:id="@+id/jumah_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:layout_marginLeft="@dimen/dp_15"
                    />

                <CheckBox
                    android:id="@+id/jumahEnable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable"
                    android:checked="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/jumahEdit"
                    android:text="@string/icon_edit"
                    android:layout_marginLeft="@dimen/dp_15"
                    />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/settings_bg"
            android:padding="15dp"
            android:layout_marginTop="@dimen/dp_5"
            >

            <TextView
                android:id="@+id/textview_namaz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/save_namaz_message" />

            <TextView
                android:id="@+id/edit_textView_namaz_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:text="@string/icon_edit"
                />
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_namaz_msg"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_margin="20dp"
            android:enabled="false"
            android:gravity="left"
            android:hint="Message"
            android:maxLines="5"
            android:padding="5dp"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_enable_namaz_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/enable_namaz_msg" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save_namaz_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/save_message"
            android:textColor="@color/white"
            android:visibility="gone" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/settings_bg"
            android:padding="15dp"
            android:layout_marginTop="@dimen/dp_5"
            >

            <TextView
                android:id="@+id/textview_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/save_custom_message" />

            <TextView
                android:id="@+id/edit_textview_cusstom_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_edit"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_custom_msg"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_margin="20dp"
            android:enabled="false"
            android:gravity="left"
            android:hint="Message"
            android:maxLines="5"
            android:padding="5dp"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_enable_custom_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/enable_namaz_msg" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save_custom_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/save_message"
            android:textColor="@color/white"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/settings_bg"
            android:padding="15dp"
            android:layout_marginTop="@dimen/dp_5"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/save_vibrate_time" />

            <TextView
                android:id="@+id/edit_textview_viberate_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_edit"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_viberate_time"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_margin="20dp"
            android:enabled="false"
            android:gravity="left"
            android:hint="Viberate time in minutes"
            android:maxLines="5"
            android:padding="5dp"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/btn_save_viberate_time_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/save_time"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>